Replace deprecated constructors by valueOf for Byte(),Double()...
Remove compiler warnings (valueOf instead of constructors/new Byte(),Double()... ) (#1940)

Signed-off-by: Radek Felcman <radek.felcman@oracle.com>