@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -56,15 +56,15 @@ public class RCMDistributedServersModel extends DistributedServersModel {
         Employee employee = (Employee)manager.getObject(Employee.class, "0001");
 
         Hashtable configurationHashtable = new Hashtable();
-        configurationHashtable.put(Employee.class, new Integer(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
+        configurationHashtable.put(Employee.class, Integer.valueOf(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
         ConfigurableUpdateChangeObjectTest test = new ConfigurableUpdateChangeObjectTest(employee, configurationHashtable);
         test.setName("Update Change Employee - Invalidate Employee");
         test.setDescription("Test the invalidation setting on cache synchronization for Employee");
         addTest(test);
 
         configurationHashtable = new Hashtable();
-        configurationHashtable.put(PhoneNumber.class, new Integer(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
-        configurationHashtable.put(Employee.class, new Integer(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
+        configurationHashtable.put(PhoneNumber.class, Integer.valueOf(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
+        configurationHashtable.put(Employee.class, Integer.valueOf(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
         test = new ConfigurableUpdateChangeObjectTest(employee, configurationHashtable);
         test.setName("Update Change Employee - Invalidate Employee, Phone Number");
         test.setDescription("Test the invalidation setting on cache synchronization for Phone Number");
@@ -83,25 +83,25 @@ public class RCMDistributedServersModel extends DistributedServersModel {
         addTest(new IsolatedObjectNotSentTest());
 
         configurationHashtable = new Hashtable();
-        configurationHashtable.put(IsolatedEmployee.class, new Integer(ClassDescriptor.SEND_OBJECT_CHANGES));
+        configurationHashtable.put(IsolatedEmployee.class, Integer.valueOf(ClassDescriptor.SEND_OBJECT_CHANGES));
         IsolatedObjectNotSentTest atest = new IsolatedObjectNotSentTest(configurationHashtable);
         atest.setName("IsolatedObjectNotSentTest - SEND_OBJECT_CHANGES");
         addTest(atest);
 
         configurationHashtable = new Hashtable();
-        configurationHashtable.put(IsolatedEmployee.class, new Integer(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
+        configurationHashtable.put(IsolatedEmployee.class, Integer.valueOf(ClassDescriptor.INVALIDATE_CHANGED_OBJECTS));
         atest = new IsolatedObjectNotSentTest(configurationHashtable);
         atest.setName("IsolatedObjectNotSentTest - INVALIDATE_CHANGED_OBJECTS");
         addTest(atest);
 
         configurationHashtable = new Hashtable();
-        configurationHashtable.put(IsolatedEmployee.class, new Integer(ClassDescriptor.SEND_NEW_OBJECTS_WITH_CHANGES));
+        configurationHashtable.put(IsolatedEmployee.class, Integer.valueOf(ClassDescriptor.SEND_NEW_OBJECTS_WITH_CHANGES));
         atest = new IsolatedObjectNotSentTest(configurationHashtable);
         atest.setName("IsolatedObjectNotSentTest - SEND_NEW_OBJECTS_WITH_CHANGES");
         addTest(atest);
 
         configurationHashtable = new Hashtable();
-        configurationHashtable.put(IsolatedEmployee.class, new Integer(ClassDescriptor.DO_NOT_SEND_CHANGES));
+        configurationHashtable.put(IsolatedEmployee.class, Integer.valueOf(ClassDescriptor.DO_NOT_SEND_CHANGES));
         atest = new IsolatedObjectNotSentTest(configurationHashtable);
         atest.setName("IsolatedObjectNotSentTest - DO_NOT_SEND_CHANGES");
         addTest(atest);
