@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -311,7 +311,7 @@ public class ConcurrentAddress implements Serializable, Cloneable {
         DirectToFieldMapping cityMapping = new DirectToFieldMapping();
         cityMapping.setAttributeName("city");
         cityMapping.setFieldName("CONCURRENT_ADDRESS.CITY");
-        cityMapping.setWeight(new Integer(10));
+        cityMapping.setWeight(Integer.valueOf(10));
         descriptor.addMapping(cityMapping);
 
         DirectToFieldMapping countryMapping = new DirectToFieldMapping();
@@ -319,7 +319,7 @@ public class ConcurrentAddress implements Serializable, Cloneable {
         countryMapping.setFieldName("CONCURRENT_ADDRESS.COUNTRY");
         countryMapping.setSetMethodName("setCountry");
         countryMapping.setGetMethodName("getCountry");
-        countryMapping.setWeight(new Integer(9));
+        countryMapping.setWeight(Integer.valueOf(9));
         descriptor.addMapping(countryMapping);
 
         DirectToFieldMapping idMapping = new DirectToFieldMapping();
@@ -327,13 +327,13 @@ public class ConcurrentAddress implements Serializable, Cloneable {
         idMapping.setFieldName("CONCURRENT_ADDRESS.ADDRESS_ID");
         idMapping.setSetMethodName("setId");
         idMapping.setGetMethodName("getId");
-        idMapping.setWeight(new Integer(8));
+        idMapping.setWeight(Integer.valueOf(8));
         descriptor.addMapping(idMapping);
 
         DirectToFieldMapping postalCodeMapping = new DirectToFieldMapping();
         postalCodeMapping.setAttributeName("postalCode");
         postalCodeMapping.setFieldName("CONCURRENT_ADDRESS.P_CODE");
-        postalCodeMapping.setWeight(new Integer(7));
+        postalCodeMapping.setWeight(Integer.valueOf(7));
         descriptor.addMapping(postalCodeMapping);
 
         DirectToFieldMapping provinceMapping = new DirectToFieldMapping();
@@ -341,13 +341,13 @@ public class ConcurrentAddress implements Serializable, Cloneable {
         provinceMapping.setFieldName("CONCURRENT_ADDRESS.PROVINCE");
         provinceMapping.setSetMethodName("setProvince");
         provinceMapping.setGetMethodName("getProvince");
-        provinceMapping.setWeight(new Integer(6));
+        provinceMapping.setWeight(Integer.valueOf(6));
         descriptor.addMapping(provinceMapping);
 
         DirectToFieldMapping streetMapping = new DirectToFieldMapping();
         streetMapping.setAttributeName("street");
         streetMapping.setFieldName("CONCURRENT_ADDRESS.STREET");
-        streetMapping.setWeight(new Integer(5));
+        streetMapping.setWeight(Integer.valueOf(5));
         descriptor.addMapping(streetMapping);
 
         return descriptor;
