@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -157,13 +157,13 @@ public class ExpressionJavaPrinter {
     }
 
     public void printByte(Byte aByte) {
-            printString("new Byte((byte)");
+            printString("Byte.valueOf((byte)");
             printString((aByte).toString());
             printString(")");
     }
 
     public void printCharacter(Character aCharacter) {
-            printString("new Character('");
+            printString("Character.valueOf('");
             printString((aCharacter).toString());
             printString("')");
     }
