@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2023 Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2005, 2015 SAP. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -55,11 +55,11 @@ public class TestEmployee_Review extends JPA1Base {
             em.persist(_review2);
             em.flush();
             env.commitTransactionAndClear(em);
-            Review rev = em.find(Review.class, new Integer(12));
+            Review rev = em.find(Review.class, Integer.valueOf(12));
             verify(rev != null, "Review null");
             verify(rev.getId() == 12, "wrong review");
             env.beginTransaction(em);
-            Employee employee = em.find(Employee.class, new Integer(7));
+            Employee employee = em.find(Employee.class, Integer.valueOf(7));
             verify(employee != null, "employee not found");
             Set reviews = employee.getReviews();
             verify(reviews.size() == 2, "set has wrong size");
@@ -74,7 +74,7 @@ public class TestEmployee_Review extends JPA1Base {
     public void testFindIndividualReview() {
         final EntityManager em = getEnvironment().getEntityManager();
         try {
-            Review rev = em.find(Review.class, new Integer(12));
+            Review rev = em.find(Review.class, Integer.valueOf(12));
             verify(rev != null, "Review null");
             verify(rev.getId() == 12, "wrong review");
         } finally {
@@ -88,7 +88,7 @@ public class TestEmployee_Review extends JPA1Base {
         final EntityManager em = env.getEntityManager();
         try {
             env.beginTransaction(em);
-            Employee employee = em.find(Employee.class, new Integer(7));
+            Employee employee = em.find(Employee.class, Integer.valueOf(7));
             verify(employee != null, "employee not found");
             Set reviews = employee.getReviews();
             verify(reviews.size() == 2, "set has wrong size");
@@ -118,7 +118,7 @@ public class TestEmployee_Review extends JPA1Base {
             } else {
                 failureExpected = true;
             }
-            Employee employee = em.find(Employee.class, new Integer(7));
+            Employee employee = em.find(Employee.class, Integer.valueOf(7));
             verify(employee != null, "employee not found");
             Set reviews = employee.getReviews();
             try {
@@ -142,7 +142,7 @@ public class TestEmployee_Review extends JPA1Base {
         final EntityManager em = env.getEntityManager();
         try {
             env.beginTransaction(em);
-            Employee employee = em.find(Employee.class, new Integer(7));
+            Employee employee = em.find(Employee.class, Integer.valueOf(7));
             verify(employee != null, "employee not found");
             employee = AbstractBaseTest.serializeDeserialize(employee);
             Set reviews = employee.getReviews();
@@ -167,7 +167,7 @@ public class TestEmployee_Review extends JPA1Base {
         final EntityManager em = env.getEntityManager();
         try {
             env.beginTransaction(em);
-            Employee employee = em.find(Employee.class, new Integer(7));
+            Employee employee = em.find(Employee.class, Integer.valueOf(7));
             verify(employee != null, "employee not found");
             Set reviews = employee.getReviews();
             // touch the set
