@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -55,7 +55,7 @@ public class XmlPathsTestCases extends JAXBWithJSONTestCases{
      */
     public Employee getControlObject() {
         Employee emp = new Employee();
-        emp.thing = new Integer(INT_VAL);
+        emp.thing = Integer.valueOf(INT_VAL);
         return emp;
     }
 
