@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -63,7 +63,7 @@ public class MarshallerEncodingTest extends OXTestCase {
         originalEncoding = (String)marshaller.getProperty(Marshaller.JAXB_ENCODING);
         originalFormatting = (Boolean)marshaller.getProperty(Marshaller.JAXB_FORMATTED_OUTPUT);
         marshaller.setProperty(Marshaller.JAXB_ENCODING, encoding);
-        marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, new Boolean(false));
+        marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.valueOf(false));
         controlObject = setupControlObject();
 
     }
