@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -48,7 +48,7 @@ public class MarshallerFragmentTestCases extends OXTestCase {
         marshaller = jaxbContext.createMarshaller();
 
         originalSetting = (Boolean)marshaller.getProperty(XMLConstants.JAXB_FRAGMENT);
-        marshaller.setProperty(XMLConstants.JAXB_FRAGMENT, new Boolean(true));
+        marshaller.setProperty(XMLConstants.JAXB_FRAGMENT, Boolean.valueOf(true));
 
         //set up controlObject
         controlObject = new Employee();
