@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -58,7 +58,7 @@ public class AnyCollectionWithoutGroupingWithXMLRootTestCases extends XMLMapping
 
         XMLRoot xmlroot2 = new XMLRoot();
 
-        xmlroot2.setObject(new Integer(15));
+        xmlroot2.setObject(Integer.valueOf(15));
         xmlroot2.setLocalName("theInteger");
         xmlroot2.setSchemaType(XMLConstants.INT_QNAME);
         any.addElement(xmlroot2);
