@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -31,7 +31,7 @@ public class TypeAttributeNullTestCases extends XMLMappingTestCases {
         Employee employee = new Employee();
         Identifier id = new Identifier();
         id.setInitials("AAA");
-        id.setSinNumber(new Integer(123));
+        id.setSinNumber(Integer.valueOf(123));
         employee.setIdentifier(id);
         employee.setFirstName(CONTROL_FIRST_NAME);
         employee.setLastName(CONTROL_LAST_NAME);
