@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -38,7 +38,7 @@ public class SDODataObjectGetDateConversionByXPathQueryTest extends SDODataObjec
         SDOProperty prop = (SDOProperty)dataObject_c0.getType().getProperty("test");
         prop.setType(SDOConstants.SDO_DATE);
 
-        //Boolean bb = new Boolean(true);
+        //Boolean bb = Boolean.valueOf(true);
         //List b = new ArrayList();
         long l = 12000;
         Date d = new Date(l);
