@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -496,14 +496,14 @@ public Integer getRankFromObject()
     }
 
     if (getDesignation().equals("Executive"))
-        rank = new Integer(1);
+        rank = Integer.valueOf(1);
     if (getDesignation().equals("Non-Executive"))
-        rank = new Integer(2);
+        rank = Integer.valueOf(2);
     return rank;
 }
 public String getRankFromRow(Record row, Session aSession)
 {
-    Integer value = new Integer(((Number)row.get("RANK")).intValue());
+    Integer value = Integer.valueOf(((Number)row.get("RANK")).intValue());
     String rank = null;
     Employee employee = new Employee();
 
