@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -164,7 +164,7 @@ public final class ConnectionCountPane extends AbstractSubjectPanel
             protected Object getValueFromSubject()
             {
                 ConnectionPoolAdapter pool = (ConnectionPoolAdapter) subject;
-                return new Integer(pool.getMaxConnections());
+                return Integer.valueOf(pool.getMaxConnections());
             }
 
             protected void setValueOnSubject(Object value)
@@ -200,7 +200,7 @@ public final class ConnectionCountPane extends AbstractSubjectPanel
             protected Object getValueFromSubject()
             {
                 ConnectionPoolAdapter pool = (ConnectionPoolAdapter) subject;
-                return new Integer(pool.getMinConnections());
+                return Integer.valueOf(pool.getMinConnections());
             }
 
             protected void setValueOnSubject(Object value)
