@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -962,7 +962,7 @@ public class RdbmsOptionsPropertiesPage extends AbstractLoginPropertiesPage
             protected Object getValueFromSubject()
             {
                 DatabaseLoginAdapter adapter = (DatabaseLoginAdapter) subject;
-                return new Integer(adapter.getMaxBatchWritingSize());
+                return Integer.valueOf(adapter.getMaxBatchWritingSize());
             }
 
             protected void setValueOnSubject(Object value)
